# ARWallhack

./: .gitignore  Readme.md  UpgradeLog.htm
ARWallhackApp/: settings.gradle
ARWallhackApp/app/: build.gradle
ARWallhackURP/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ARWallhackURP/UserSettings/: AndroidLogcatSettings.asset
Assets/Images/: ReferenceImageLibrary.asset  frame.psd
Assets/Materials/: red.mat
Assets/Prefabs/: Origin.prefab  OtherPlayer.prefab  frame 1.prefab  frame.prefab
Assets/Scenes/: SampleScene.unity  start.unity
Assets/Scripts/: ImageTrackHandler.cs  NetworkCoordinateClient.cs  Origin.cs  OtherPlayerBehaviour.cs  PlayerHandler.cs  Spotter.cs
Assets/Settings/: Renderer2D.asset
CoordinateServer/: AsyncCommunicationServer.cpp  AtoB.cpp  AtoB.h  CoordinateServer.cpp  CoordinateServer.vcxproj  CoordinateServer.vcxproj.filters  MarkerTracker.cpp  MarkerTracker.h
CoordinateServer/x64/Debug/: vc142.idb  (+3 more)
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
ServerStuff/: AsyncCommunicationServer.cpp  CommunicationClient.cs  CoordinateServer.cpp
TargetPositionEstimation/: AsyncCommunicationServer.cpp  AsyncCommunicationServer.h  AtoB.cpp  AtoB.h  CMakeLists.txt  PoseEstimation.cpp  TargetToOrigin(faulty).cpp  TargetToOrigin(poseonly).cpp  TargetToOrigin(tidied).cpp  TargetToOrigin.cpp  Win_Getopt.c  json.hpp
UserSettings/: AndroidLogcatSettings.asset  EditorUserSettings.asset
UserSettings/Layouts/: default-2021.dwlt
test_BackUpThisFolder_ButDontShipItWithYourGame/Managed/: UnityLinkerToEditorData.json
(+157 files in other folders)
